Move location partial to offices directory

--- a/templates/approach/index.html
+++ b/templates/approach/index.html
@@ -81,7 +81,7 @@
   <ul class="row -quarters photo-row-separators semantic-only-list background-white big-margin-bottom">
     {% for location in craft.entries.section('offices').all() %}
       <li class="row-block">
-        {% include 'partials/_article-location' %}
+        {% include 'offices/_article' %}
       </li>
     {% endfor %}
   </ul>
