--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -5,11 +5,11 @@
   <h1>{{ entry.title }}</h1>
 
   <h3>Address</h3>
-  {{ entry.address.address1 }}<br>
-  {% if entry.address.address2 %}
-    {{ entry.address.address2 }}<br>
+  {{ entry.officeAddress1 }}<br>
+  {% if entry.officeAddress2 %}
+    {{ entry.officeAddress2 }}<br>
   {% endif %}
-  {{ entry.address.city }}, {{ entry.address.state }} {{ entry.address.postalCode }}<br>
+  {{ entry.officeCity }}, {{ entry.officeState }} {{ entry.officePostalCode }}<br>
 
   <h3>Phone</h3>
   {{ entry.phoneNumber }}<br>
