--- a/templates/projects/_article.html
+++ b/templates/projects/_article.html
@@ -1,12 +1,19 @@
-{% set projectImage = entry.projectImage[0] ?? null %}
-<li class="project interior" data-services="{% for service in entry.services %}{{ service.slug }} {% endfor %}" data-markets="{% for market in entry.markets %}{{ market.slug }} {% endfor %}">
-  <article>
+{% set projectImage = project.projectImage[0] ?? null %}
+
+{% set projectAspectRatio = projectImage ?
+  (projectImage.getWidth() > projectImage.getHeight() ? 'landscape' : 'portrait') :
+  'landscape' %}
+
+{% set projectColor = (project.colorSwatch.label ?? 'black')|lower %}
+
+<article class="project interior module project-module bigclicky" data-services="{% for service in project.services %}{{ service.slug }} {% endfor %}" data-markets="{% for market in project.markets %}{{ market.slug }} {% endfor %}">
+  <div class="image-wrap -{{ projectAspectRatio }}">
     {% if projectImage %}
-      <div class="project-image lazy" style="background-image:url('/assets/images/gray.gif');" data-original="{{ projectImage.getUrl() }}"></div>
+      <div class="project-image lazy image" style="background-image: url('');" data-original="{{ projectImage.getUrl('thumb') }}"></div>
     {% endif %}
-    <header>
-      <h1><a href="{{ entry.url }}">{{ entry.title }}</a></h1>
-    </header>
-    <a class="view-project" href="{{ entry.url }}"><span>View Project</span></a>
-  </article>
-</li>
+  </div>
+  <div class="project-title background-{{ projectColor }}">
+    <h1 class="font-p"><a href="{{ project.url }}">{{ project.projectClientName }}</a></h1>
+    <h2 class="font-captions">{{ project.projectName }}</h2>
+  </div>
+</article>
