Finish markup for impact posts;  Add featured post detection for impact category pages; Add recent post as fallback for featured post for impact pages;

--- a/templates/impact/_article.html
+++ b/templates/impact/_article.html
@@ -1,7 +1,10 @@
 <article class="module post-module no-underline pad">
-  <div class="category font-details">TEST</div>
+  {% set impactType = post.impactType[0] ?? null %}
+  {% if impactType %}
+    <div class="category font-details">{{ impactType }}</div>
+  {% endif %}
   <h1 class="title font-h2">{{ post.title }}</h1>
-  <p class="excerpt">LOREM LOREM</p>
+  <p class="excerpt">{{ post.excerpt ? post.excerpt : post.description | chop(limit=20, unit='w', append='…') }}</p>
   <a class="button" href="{{ post.url }}">
     <span class="border"></span><span class="extra-corners"></span>
     Read More
