--- a/web/assets/scss/components/_page-headers.scss
+++ b/web/assets/scss/components/_page-headers.scss
@@ -12,25 +12,21 @@
     min-height: calc(66.67vw * .667);
   }
 
+  .row {
+    z-index: 1;
+  }
+
   .hero-image {
     height: 0;
     position: relative;
     padding-bottom: $landscape-padding;
+    z-index: -1;
+
 
     @include media-md {
       top: 0;
       left: 0;
       padding: 0;
-      width: 100%;
-      height: 100%;
-      position: absolute;
-    }
-
-    .image {
-      @extend .bg-cover;
-      top: 0;
-      left: 0;
-      z-index: -1;
       width: 100%;
       height: 100%;
       position: absolute;
