--- a/templates/impact/index.html
+++ b/templates/impact/index.html
@@ -46,11 +46,11 @@
   <!-- header (w/ featured post) -->
   <div class="hero-wrap">
     {% if featuredImpact %}
-      {% set post = featuredImpact %}
+      {% set entry = featuredImpact %}
       <div class="hero-image image-wrap">
-        {% set impactImage = post.impactImage[0] ?? null %}
+        {% set impactImage = entry.impactImage[0] ?? null %}
         {% if impactImage %}
-          <div class="image" style="background-image: url({{ impactImage.getUrl('header') }});"></div>
+          <div class="lazy image" style="background-image: url('');" data-original="{{ impactImage.getUrl('thumb') }}"></div>
         {% endif %}
       </div>
       <div class="row -halves">
