--- a/templates/partials/_article-service.html
+++ b/templates/partials/_article-service.html
@@ -1,11 +1,11 @@
 <article class="module service-module background-white text-black zoom-hover bigclicky">
   <div class="image-wrap -square">
-    {% set image = service.serviceImage.one() %}
+    {% set image = cat.serviceImage.one() %}
     {% if image %}
-      <div class="image" style="background-image: url('{{ image.getUrl('thumb') }}')"></div>
+      <div class="lazy image" style="background-image: url('');" data-original="{{ image.getUrl('thumb') }}"></div>
     {% endif %}
   </div>
   <div class="text pad">
-    <h1 class="name font-p no-margin"><a href="{{ service.url }}">{{ service.title }}</a></h1>
+    <h1 class="name font-p no-margin"><a href="{{ cat.url }}">{{ cat.title }}</a></h1>
   </div>
 </article>
