--- a/templates/people/_article.html
+++ b/templates/people/_article.html
@@ -1,4 +1,4 @@
-{% set personImage = entry.personImage[0] ?? null %}
+{% set personImage = person.personImage[0] ?? null %}
 
 <article class="module person-module background-white text-black zoom-hover bigclicky">
   <div class="image-wrap -square">
@@ -7,7 +7,7 @@
     {% endif %}
   </div>
   <div class="text pad">
-    <h1 class="name font-p no-margin"><a href="{{ entry.url }}" class="no-underline">{{ entry.title }}</a></h1>
-    <h2 class="title font-details">{{ entry.personTitle }}</h2>
+    <h1 class="name font-p no-margin"><a href="{{ person.url }}" class="no-underline">{{ person.title }}</a></h1>
+    <h2 class="title font-details">{{ person.personTitle }}</h2>
   </div>
 </article>
